<resources>
    <string name="app_name">Snooz</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="log_in_text">Log In</string>
    <string name="sign_up_intro">Welcome to Snooz. Let\'s get acquainted!</string>
    <string name="log_in_intro">Welcome back!</string>
    <string name="enter_name_signup_text">Enter Your Name</string>
    <string name="enter_age_signup_text">Enter Your Age</string>
    <string name="enter_email_signup_text">Enter Your Email Address</string>
    <string name="enter_password_signup_text">Enter Your Password</string>
    <string name="already_has_account_text"><u>I already have an account</u></string>
    <string name="stars_image">Stars image</string>
    <string name="moon_image">Moon image</string>
    <string name="continue_button_text">Continue</string>
    <string name="make_an_account_text"><u>I don\'t have an account</u></string>
    <string name="cool_text">Cool!</string>
    <string name="more_questions_text"><u>We got some more questions for you</u></string>
    <string name="fall_asleep_text"><u>What time do you want to fall asleep?</u></string>
    <string name="wake_up_text"><u>What time do you want to wake up?</u></string>
    <string name="lets_get_started_button_text">Let\'s get started</string>
    <string name="hour_text">Hour</string>
    <string name="delete_dream_text">Delete Dream</string>
    <string name="minute_text">Minutes</string>
    <string name="main_welcome_text">Welcome Ara! It is Sunday 23:00pm</string>
    <string name="add_dream_text">Add Dream</string>
    <string name="view_all_dreams_text">View All Dreams</string>
    <string name="log_out_text">Log Out</string>
    <string name="quick_add_text">Quick Add</string>
    <string name="dream_name_text">Dream Name</string>
    <string name="dream_tag_text">Dream Tag</string>
    <string name="enter_dream_here_text">Enter Dream Here</string>
    <string name="autocorrect_dream">Autocorrect Dream</string>
    <string name="generate_dream_image">Generate Dream Visualization</string>
    <string name="dream_visualization_image">Dream visualization image</string>
    <string name="empty_fields_error">There are some empty fields</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>