<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AddDreamFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/quick_add_text"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/dreamNameInput"
            android:layout_width="338dp"
            android:layout_height="49dp"
            android:background="@drawable/rounded_corners_darkgray_background"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:inputType="textPersonName"
            android:hint="@string/dream_name_text"
            android:textColorHint="#BFBFBF"
            android:textAlignment="center"
            android:textColor="#BFBFBF"
            android:textSize="11.5sp" />

        <EditText
            android:id="@+id/dreamTagInput"
            android:layout_width="338dp"
            android:layout_height="49dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corners_darkgray_background"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:inputType="textPersonName"
            android:hint="@string/dream_tag_text"
            android:textColorHint="#BFBFBF"
            android:textAlignment="center"
            android:textColor="#BFBFBF"
            android:textSize="11.5sp" />

        <EditText
            android:id="@+id/dreamTextInput"
            android:layout_width="338dp"
            android:layout_height="238dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corners_darkgray_background"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:gravity="center|top"
            android:hint="@string/enter_dream_here_text"
            android:inputType="textMultiLine"
            android:paddingTop="20sp"
            android:scrollHorizontally="false"
            android:textColor="#BFBFBF"
            android:textColorHint="#BFBFBF"
            android:textSize="11.5sp"

            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/autocomplete_dream_button"
            android:textAllCaps="false"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/rounded_corners_darkgray_background"
            android:fontFamily="@font/poppins"
            android:text="@string/autocorrect_dream"
            android:textColor="#FFFFFF"
            android:textSize="11sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_dream_button"
            android:textAllCaps="false"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/rounded_corners_darkgray_background"
            android:fontFamily="@font/poppins"
            android:text="@string/add_dream_text"
            android:textColor="#FFFFFF"
            android:textSize="11sp" />
    </LinearLayout>
</FrameLayout>