<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".Login">

    <TextView
        android:id="@+id/sign_up_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/log_in_text"
        android:textColor="#FFFFFF"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="320dp"
        android:layout_height="21dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/log_in_intro"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_textview" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints="name"
        android:backgroundTint="#9F9F9F"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/enter_email_signup_text"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#9F9F9F"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/enter_password_signup_text"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners_darkgray_background"
        android:fontFamily="@font/poppins"
        android:paddingLeft="22sp"
        android:paddingTop="4sp"
        android:paddingRight="22sp"
        android:paddingBottom="4sp"
        android:text="@string/log_in_text"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <Button
        android:id="@+id/makeAnAccount"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/make_an_account_text"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="418dp"
        android:layout_height="209dp"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="136dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/moon_image_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>