<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".Signup">

    <!--    <ImageView-->
    <!--        android:id="@+id/imageView4"-->
    <!--        android:layout_width="211dp"-->
    <!--        android:layout_height="184dp"-->
    <!--        android:layout_marginTop="52dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.505"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:srcCompat="@mipmap/moon_image_foreground" />-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="851dp"
        android:layout_height="599dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/cloud_background_layer" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="449dp"
        android:layout_height="403dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/stars_foreground" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="449dp"
        android:layout_height="403dp"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/stars_foreground" />

    <TextView
        android:id="@+id/sign_up_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up_text"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="239dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/sign_up_intro"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_textview" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="211dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#9F9F9F"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="textPersonName"
        android:text="@string/enter_name_signup_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="169dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#9F9F9F"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="textPersonName"
        android:text="@string/enter_age_signup_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="123dp"
        android:layout_height="41dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_corner_buttons"
        android:backgroundTint="#19001D"
        android:fontFamily="@font/poppins"
        android:paddingLeft="22sp"
        android:paddingTop="4sp"
        android:paddingRight="22sp"
        android:paddingBottom="4sp"
        android:text="@string/continue_button_text"
        android:textColor="#FFFFFF"
        android:textSize="11sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />




</androidx.constraintlayout.widget.ConstraintLayout>