<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
 >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient"
        tools:context=".Signup">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="279dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:gravity="start"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.401"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5">


            <EditText
                android:id="@+id/currentSleepTimeHour"
                android:layout_width="74dp"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/hour_text"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/currentSleepTimeMinutes"
                android:layout_width="74dp"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/minute_text"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="247dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:gravity="center|start"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.323"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6">

            <EditText
                android:id="@+id/desiredSleepTimeHours"
                android:layout_width="74dp"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/hour_text"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/desiredSleepTimeMinutes"
                android:layout_width="74dp"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/minute_text"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/sign_up_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/cool_text"
            android:textColor="#FFFFFF"
            android:textSize="33sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.188"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        <TextView-->
<!--            android:id="@+id/textView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="28dp"-->
<!--            android:fontFamily="@font/poppins_light"-->
<!--            android:text="@string/already_has_account_text"-->
<!--            android:textColor="#FFFFFF"-->
<!--            android:textSize="10sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/registerButton" />-->

        <TextView
            android:id="@+id/textView2"
            android:layout_width="282dp"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="@string/more_questions_text"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_textview" />


        <TextView
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="288dp"
            android:layout_height="26dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:text="@string/fall_asleep_text"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.447"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="291dp"
            android:layout_height="26dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:text="@string/wake_up_text"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.438"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/rounded_corners_darkgray_background"
            android:fontFamily="@font/poppins"
            android:paddingLeft="22sp"
            android:paddingTop="4sp"
            android:paddingRight="22sp"
            android:paddingBottom="4sp"
            android:text="@string/lets_get_started_button_text"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.438"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
